Add Importer For CS Items

--- a/CSPortfolioLib/CSPortfolioLib.csproj
+++ b/CSPortfolioLib/CSPortfolioLib.csproj
@@ -8,6 +8,8 @@
 
     <ItemGroup>
         <PackageReference Include="Swashbuckle.AspNetCore"/>
+        <PackageReference Include="Refit" />
+        <PackageReference Include="Refit.HttpClientFactory" />
     </ItemGroup>
     
 </Project>
