--- a/CSPortfolioAPI/CSPortfolioAPI.csproj
+++ b/CSPortfolioAPI/CSPortfolioAPI.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="EFCore.NamingConventions" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
@@ -30,5 +31,9 @@
 
     <ItemGroup>
       <ProjectReference Include="..\CSPortfolioLib\CSPortfolioLib.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Migrations\" />
     </ItemGroup>
 </Project>
