--- a/CSItemImporter/CSItemImporter.csproj
+++ b/CSItemImporter/CSItemImporter.csproj
@@ -27,4 +27,10 @@
       <ProjectReference Include="..\CSPortfolioLib\CSPortfolioLib.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="appsettings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
