--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,34 +1,35 @@
 <Project>
-    <PropertyGroup>
-        <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-    </PropertyGroup>
-    <ItemGroup>
-        <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0"/>
-        <PackageVersion Include="Newtonsoft.Json" Version="13.0.1" />
-        <PackageVersion Include="Serilog" Version="4.0.0" />
-        <PackageVersion Include="Microsoft.Extensions.Logging" Version="9.0.1" />
-        <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="9.0.1" />
-        <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.1" />
-        <PackageVersion Include="Microsoft.Extensions.Hosting" Version="9.0.1" />
-        <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.1" />
-        <PackageVersion Include="Microsoft.Extensions.Configuration" Version="9.0.1" />
-        <PackageVersion Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="9.0.1" />
-        <PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="9.0.1" />
-        <PackageVersion Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.1" />
-        <PackageVersion Include="Microsoft.Extensions.Options" Version="9.0.1" />
-        <PackageVersion Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.1" />
-        <PackageVersion Include="Swashbuckle.AspNetCore" Version="7.1.0" />
-        <PackageVersion Include="Scrutor" Version="6.1.0" />
-        <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="9.0.1"/>
-        <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.1"/>
-        <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.1" />
-        <PackageVersion Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
-        <!-- MassTransit & RabbitMQ -->
-        <PackageVersion Include="MassTransit.Abstractions" Version="8.5.0" />
-        <PackageVersion Include="MassTransit.EntityFrameworkCore" Version="8.5.0" />
-        <PackageVersion Include="MassTransit.RabbitMQ" Version="8.5.0" />
-        <PackageVersion Include="RabbitMQ.Client" Version="7.1.2" />
-        <PackageVersion Include="Refit" Version="8.0.0" />
-        <PackageVersion Include="Refit.HttpClientFactory" Version="8.0.0" />
-    </ItemGroup>
+  <PropertyGroup>
+    <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageVersion Include="EFCore.NamingConventions" Version="9.0.0" />
+    <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
+    <PackageVersion Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageVersion Include="Serilog" Version="4.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.Logging" Version="9.0.1" />
+    <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="9.0.1" />
+    <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.1" />
+    <PackageVersion Include="Microsoft.Extensions.Hosting" Version="9.0.1" />
+    <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.1" />
+    <PackageVersion Include="Microsoft.Extensions.Configuration" Version="9.0.1" />
+    <PackageVersion Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="9.0.1" />
+    <PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="9.0.1" />
+    <PackageVersion Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.1" />
+    <PackageVersion Include="Microsoft.Extensions.Options" Version="9.0.1" />
+    <PackageVersion Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.1" />
+    <PackageVersion Include="Swashbuckle.AspNetCore" Version="7.1.0" />
+    <PackageVersion Include="Scrutor" Version="6.1.0" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.1" />
+    <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.1" />
+    <PackageVersion Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <!-- MassTransit & RabbitMQ -->
+    <PackageVersion Include="MassTransit.Abstractions" Version="8.5.0" />
+    <PackageVersion Include="MassTransit.EntityFrameworkCore" Version="8.5.0" />
+    <PackageVersion Include="MassTransit.RabbitMQ" Version="8.5.0" />
+    <PackageVersion Include="RabbitMQ.Client" Version="7.1.2" />
+    <PackageVersion Include="Refit" Version="8.0.0" />
+    <PackageVersion Include="Refit.HttpClientFactory" Version="8.0.0" />
+  </ItemGroup>
 </Project>
