--- a/CSPortfolioAPI/CSPortfolioAPI.csproj
+++ b/CSPortfolioAPI/CSPortfolioAPI.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <PackageReference Include="EFCore.NamingConventions" />
+        <PackageReference Include="FluentResults" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
