--- a/CSPortfolioLib/CSPortfolioLib.csproj
+++ b/CSPortfolioLib/CSPortfolioLib.csproj
@@ -7,9 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="FluentResults" />
         <PackageReference Include="Swashbuckle.AspNetCore"/>
         <PackageReference Include="Refit" />
         <PackageReference Include="Refit.HttpClientFactory" />
+        <PackageReference Include="MessageBrokerLib" />
     </ItemGroup>
     
 </Project>
