--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -5,7 +5,9 @@
   <ItemGroup>
     <PackageVersion Include="EFCore.NamingConventions" Version="9.0.0" />
     <PackageVersion Include="FluentResults" Version="4.0.0" />
+    <PackageVersion Include="MessageBrokerLib" Version="0.0.1" />
     <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.9" />
     <PackageVersion Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageVersion Include="Serilog" Version="4.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Logging" Version="9.0.1" />
