Refactor Import Items Worker

--- a/CSItemImporter/appsettings.json
+++ b/CSItemImporter/appsettings.json
@@ -1,7 +1,11 @@
 {
   "ApiSettings":
   {
-    "Url": "http://csportfolioapi",
-    "Port": 8080
+    "Url": "http://csportfolioapi:8080/api",
+    "Steam": "https://steamcommunity.com",
+    "Timeout": 60
+  },
+  "WorkerSettings": {
+    "InputFolder": "./Input/current"
   }
 }
