--- a/CSPriceUpdater/appsettings.json
+++ b/CSPriceUpdater/appsettings.json
@@ -13,5 +13,11 @@
     "Port": "5672",
     "Username": "guest",
     "Password": "guest"
+  },
+  "ApiSettings":
+  {
+    "Url": "http://csportfolioapi:8080/api",
+    "SteamUrl": "https://steamcommunity.com",
+    "Timeout": 60
   }
 }
