--- a/CSPriceUpdater/appsettings.json
+++ b/CSPriceUpdater/appsettings.json
@@ -19,5 +19,11 @@
     "Url": "http://csportfolioapi:8080/api",
     "SteamUrl": "https://steamcommunity.com",
     "Timeout": 60
+  },
+  "WorkerTimerSettings":
+  {
+    "InitialDelayMinutes": 1,
+    "IntervalMinutes": 1
   }
+  //"ENABLE_PRICE_REFRESH": true
 }
