Add User To Models

--- a/CSPortfolioAPI/appsettings.json
+++ b/CSPortfolioAPI/appsettings.json
@@ -18,5 +18,10 @@
   },
   "servers": [
     { "url": "http://localhost:4000" }
-  ]
+  ],  
+    "Jwt": {
+    "Issuer": "your-issuer",
+    "Audience": "cs-portfolio-api",
+    "SecretKey": "aGVsbG9sbG93ZWdvZGRvZGd1bmNlc3Q6V2VsbCB0aGUgd29ybGQ="
+  }
 }
