--- a/CSPortfolioAPI/Dockerfile
+++ b/CSPortfolioAPI/Dockerfile
@@ -1,10 +1,18 @@
 ﻿FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
-USER $APP_UID
+FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
+USER root
 WORKDIR /app
+
+# Create upload directory and fix ownership
+RUN mkdir -p /app/wwwroot/uploads \
+    && chown -R ${APP_UID}:${APP_UID} /app
+
+# Drop privileges
+USER ${APP_UID}
+
 EXPOSE 8080
 EXPOSE 8081
 
-FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["CSPortfolioAPI/CSPortfolioAPI.csproj", "CSPortfolioAPI/"]
