--- a/CSPortfolioAPI/appsettings.json
+++ b/CSPortfolioAPI/appsettings.json
@@ -23,6 +23,14 @@
     "Jwt": {
     "Issuer": "your-issuer",
     "Audience": "cs-portfolio-api",
-    "SecretKey": "aGVsbG9sbG93ZWdvZGRvZGd1bmNlc3Q6V2VsbCB0aGUgd29ybGQ="
+    "SecretKey": "secret"
+  },
+  "Brevo": {
+    "ApiKey": "secret",
+    "TimeoutSeconds": 60,
+    "BaseUrl": "https://api.brevo.com/v3",
+    "FrontendUrl": "http://localhost:8080",
+    "SenderEmail": "noreply@mschleifer.dev",
+    "SenderName": "CS2 Inventory Pro"
   }
 }
