Add Email Verification

--- a/CSPortfolioAPI/CSPortfolioAPI.csproj
+++ b/CSPortfolioAPI/CSPortfolioAPI.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="brevo_csharp" />
         <PackageReference Include="EFCore.NamingConventions" />
         <PackageReference Include="FluentResults" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi"/>
