--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,8 @@ ehthumbs.db
 # ------------------------
 publish/
 deploy/
+
+# ------------------------
+# Privates
+# ------------------------
+CSPortfolioAPI/appsettings.Development.json
