--- a/CSItemImporter/appsettings.json
+++ b/CSItemImporter/appsettings.json
@@ -7,5 +7,9 @@
   },
   "WorkerSettings": {
     "InputFolder": "./Input/current"
+  },
+  "BitSkinSettings":
+  {
+    "BaseUrl": "https://api.bitskins.com"
   }
 }
