--- a/CSItemImporter/appsettings.json
+++ b/CSItemImporter/appsettings.json
@@ -6,7 +6,7 @@
     "Timeout": 60
   },
   "WorkerSettings": {
-    "InputFolder": "./Input/current"
+    "InputFolder": "./Input/all_data/all.json"
   },
   "BitSkinSettings":
   {
