--- a/CSPortfolioAPI/CSPortfolioAPI.csproj
+++ b/CSPortfolioAPI/CSPortfolioAPI.csproj
@@ -41,4 +41,11 @@
     <ItemGroup>
       <Folder Include="Migrations\" />
     </ItemGroup>
+
+    <ItemGroup>
+        <EmbeddedResource Include="Sql/**/*.psql" />
+        <Content Include="Sql/**/*.psql">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
 </Project>
