--- a/compose.yaml
+++ b/compose.yaml
@@ -1,7 +1,7 @@
 ﻿services:
 
   csportfolioapi:
-    image: mschleifer/csportfolioapi:0.0.5
+    image: mschleifer/csportfolioapi:0.0.10
     build:
       context: .
       dockerfile: CSPortfolioAPI/Dockerfile
@@ -21,6 +21,8 @@
       RabbitMqConnectionSettings__Password: ${RABBITMQ_PASSWORD}
       Jwt__SecretKey: ${JWT_SECRET_KEY}
       Brevo__ApiKey: ${BREVO_API_KEY}
+      DOTNET_ENVIRONMENT: Production
+      ASPNETCORE_ENVIRONMENT: Production
     volumes:
       - ./CSPortfolioAPI/wwwroot/uploads:/app/wwwroot/uploads
     user: root
@@ -53,6 +55,7 @@
       csportfolioapi:
         condition: service_started
         restart: true
+    restart: unless-stopped
 
   csitemimporter:
     image: mschleifer/csitemimporter:0.0.4
@@ -66,7 +69,7 @@
         condition: service_started
         
   cspriceupdater:
-    image: mschleifer/cspriceupdater:0.0.4
+    image: mschleifer/cspriceupdater:0.0.6
     build:
       context: .
       dockerfile: CSPriceUpdater/Dockerfile
@@ -77,6 +80,8 @@
     depends_on:
       csportfolioapi:
         condition: service_started
+        restart: true
+    restart: unless-stopped
   
   cs-db:
     image: timescale/timescaledb:latest-pg16
@@ -95,9 +100,11 @@
       retries: 5
       start_period: 30s
       timeout: 5s
+    restart: always
       
   redis:
     image: redis
+    restart: unless-stopped
     
   rabbitmq:
     image: rabbitmq:4.1-management
@@ -120,6 +127,7 @@
       rabbitmq-server"
     volumes:
       - rabbitmq-data:/var/lib/rabbitmq
+    restart: unless-stopped
 
   masstransit-db:
     container_name: masstransit-db-cs
@@ -135,6 +143,9 @@
     ports:
       - "45432:5432"
         
+  # ---------------------------
+  # Nginx (HTTPS, self-signed for LAN)
+  # ---------------------------
   nginx:
     image: nginx:alpine
     container_name: nginx
@@ -143,10 +154,13 @@
       - "443:443"
     volumes:
       - ./nginx/conf/default.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./CSPortfolioAPI/wwwroot/uploads:/usr/share/nginx/html/uploads:ro
+      - ./nginx/cert:/etc/nginx/cert:ro
+      - ./certbot/www:/var/www/certbot
+      - ./certbot/conf:/etc/letsencrypt
     depends_on:
       - csportfolio-web-app
       - csportfolioapi
+    restart: unless-stopped
   #endregion
 
 #region Volumes
