--- a/compose.yaml
+++ b/compose.yaml
@@ -59,6 +59,7 @@
 
   csitemimporter:
     image: mschleifer/csitemimporter:0.0.4
+    container_name: csitemimporter
     build:
       context: .
       dockerfile: CSItemImporter/Dockerfile    
@@ -70,6 +71,7 @@
         
   cspriceupdater:
     image: mschleifer/cspriceupdater:0.0.6
+    container_name: cspriceupdater
     build:
       context: .
       dockerfile: CSPriceUpdater/Dockerfile
